Overflow scroll added to feeds-list to prevent buttons being shifted

--- a/sites/Feeds/style/input.sass
+++ b/sites/Feeds/style/input.sass
@@ -129,8 +129,9 @@ input
 
 
     #feed-list
-        margin-top: 1.33em
+        padding-top: 1.33em
         flex-grow: 1
+        overflow: scroll
 
     li
         padding: 1.33em 2.5em
