--- a/sites/Feeds/style/main.css
+++ b/sites/Feeds/style/main.css
@@ -103,8 +103,9 @@ input ::placeholder {
   width: 75%;
 }
 #feeds #feed-list {
-  margin-top: 1.33em;
+  padding-top: 1.33em;
   flex-grow: 1;
+  overflow: scroll;
 }
 #feeds li {
   padding: 1.33em 2.5em;
